syntax = "proto3";

option csharp_namespace = "Presentation.Grpc";

package users;

service UsersService {
    rpc GetAllUsers (Empty) returns (UsersList) {
    }
    rpc GetUserById (UserId) returns (User) {
    }
    rpc CreateUser (User) returns (User) {
    }
    rpc UpdateUser (User) returns (User) {
    }
    rpc DeleteUser (UserId) returns (Empty) {
    }
}

message Empty {}

message UserId  {
  string Id = 1;
}

message User {
  string Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string Email = 4;
  string Password = 5;
  string Token = 6;
}

message UsersList {
   repeated User users = 1;
}

message Search {
  string key = 1;
  string value = 2;
}
